History of collective.realestatebroker
======================================

2.0.3 rc4 (unreleased)
----------------------

- Nothing yet


2.0.3 rc3 (2008-06-25)
----------------------

- Fixed strange attributeerror on plone 3.1.2. Moving to that plone version
  fixes a kss bug in the album view. [reinout]


2.0.3 rc2 (2008-06-25)
----------------------

- Added optional max_height attribute to insert_image() to allow protection
  for overly large portrait image on the pdf's homepage. [reinout]

- Added css class to table cells that contain an image in the res/comm
  listings so that the image can be aligned vertically if desired. [reinout]

- Added caching of rendered pdf in an annotation. Saves a lot of cpu
  time. [reinout]


2.0.3 rc1 (released)
--------------------

- Moved rent_buy to the financial schemata for the edit view so that all
  financial fields are on the same screen. [fredvd]

- Added a field for indicating if the price is a fixed price or is still
  negotiable. Not used (yet) in the collective.realestatebroker package view
  templates, but can be exposed in your own template overrides [fredvd]


2.0.2 (released 2008-04-21)
---------------------------

- no changes, make a final release for references [fredvd]


2.0.1 rc4 (released 2008-03-06)
-------------------------------
- Add new rented state and accompanying transition so that rented houses
  have a proper listing [fred]


2.0.1 rc3 (released 2008-02-29)
-------------------------------

- View order fixed (state first, creation date second). [joris]

- Fixed test to reflect change done in rc2. [reinout]

- add house_type to the portal_catalog index (getHouse_type) [fred]

- added discreet color on formHelp [mirella]

2.0.1 rc2 (released 2008-02-04)
-------------------------------

- Fixed bug in the condition for googlemaps' javascript: it was not loaded on
  the edit form. [reinout]

2.0.1 rc (released 2008-02-04)
------------------------------
